--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
@@ -14,7 +14,7 @@
         h5 {
           font-size: 1.2rem;
           color: #181818;
-          font-weight: bold;
+          font-weight: 500;
         }
       }
       .action {
