--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/User_VCards.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/User_VCards.scss
@@ -42,6 +42,8 @@
           border-radius: 5px;
           cursor: pointer;
           transition: all 0.5s ease;
+
+      
           &:hover{
             box-shadow: 0px 4px 4px rgba(0,0,0,0.4);
             scale: 1.05;
@@ -95,12 +97,21 @@
           color: white;
           // width: 200px;
           font-size: 0.8rem;
-          border-radius: 10px;
+          border-radius: 5px;
           transition: all 0.4s ease;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+
+          i{
+            font-size: 1.2rem;
+            font-weight: 600;
+          }
           &:hover {
-            background-color: #fff;
+            background-color: #818cfc;
             box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
-            color: #000;
+            color: #ffffff;
             transition: all 0.4s ease;
           }
         }
@@ -131,8 +142,8 @@
             th {
               padding: 0.7rem 0.5rem;
               background-color: #f8f9fa;
-              font-size: 0.9rem;
-font-weight: bold;
+              font-size: 0.8rem;
+font-weight: 500;
               color: rgb(22, 22, 22);
             }
          
@@ -162,7 +173,11 @@ font-weight: bold;
               color: rgb(99, 99, 99);
               border-bottom: 1px solid rgb(230, 230, 230);
 
-
+a{
+  text-decoration: none;
+  font-size: 0.7rem;
+  font-weight: 500;
+}
               img{
                 width: 60px;
                 height: 60px;
@@ -185,11 +200,11 @@ font-weight: bold;
               i:nth-child(2) {
                 font-size: 1.5rem;
                 padding-left: 10px;
-                color: rgb(238, 82, 43);
+                color: rgb(95, 93, 255);
                 cursor: pointer;
 
                 &:hover {
-                  color: rgb(252, 135, 135);
+                  color: rgb(66, 66, 66);
                 }
               }
               i:nth-child(3) {
@@ -218,8 +233,34 @@ font-weight: bold;
               &:nth-child(4) {
                 i {
                   font-size: 1.5rem;
+             
                   color: #6571ff;
                 }
+                small{
+                  padding: 5px 10px;
+                  background-color: rgb(154, 250, 178);
+                  border-radius: 5px;
+                  color: #2e2e2e;
+                  font-weight: 550;
+                 }
+              }
+              &:nth-child(5) {
+                i {
+                  font-size: 1.5rem;
+             
+                  color: #6571ff;
+                }
+              
+              }
+              &:nth-child(6) {
+             small{
+              padding: 5px 10px;
+              background-color: gray;
+              border-radius: 5px;
+              color: #fff;
+              font-weight: 550;
+             }
+              
               }
             }
             .plan{
