--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
@@ -9,6 +9,37 @@
         font-weight: 550;
       }
     }
+    .close_new_vcardurl_page{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      button{
+        padding: 6px 1rem;
+        background-color: royalblue;
+        font-size: 0.9rem;
+        font-weight: 500;
+        color: #fff;
+        border-radius: 5px;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        gap: 10px;
+        transition: all 0.3s ease-in;
+        i{
+          font-size: 1rem;
+        }
+
+        &:hover{
+          background-color: rgb(44, 93, 240);
+          box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+          scale: 1.05;
+          transition: all 0.3s ease-in;
+        }
+      }
+    }
+    
 
     .new_vcardURL_container_box {
         width: 100%;
