--- a/client/src/User_Admin_Dashboard/User_Admin_SideNav/User_Admin_SideNavBar.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_SideNav/User_Admin_SideNavBar.scss
@@ -135,7 +135,7 @@
     &::-webkit-scrollbar {
       width: 3px;
       height: 4px;
-      background-color: #d0faf1;
+      background-color: #ffffff;
       border-radius: 5px;
     }
     &::-webkit-scrollbar-thumb {
