URL component error handling initialized

--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
@@ -74,7 +74,15 @@
                 height: 70px;
               }
             }
-    
+            .p-editor-toolbar{
+              border: 1px solid #b9b9b9;
+            }
+            .ql-editor{
+              border: 1px solid #b9b9b9;
+              // border-left: 1px solid #b9b9b9;
+              // border-right: 1px solid #b9b9b9;
+              // border-bottom: 1px solid #b9b9b9;
+            }
             input[type="text"],
             input[type="email"],
             input[type="tel"] {
