--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
@@ -3,42 +3,55 @@
     width: 100%;
     padding: 1rem;
 
-    .new_vcardurl_form_title{
+    .new_vcardurl_row_one{
+display: flex;
+align-items: center;
+justify-content: space-between;
+width: 100%;
 
-      h5{
-        font-weight: 550;
-      }
-    }
-    .close_new_vcardurl_page{
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
+.title{
+  display: flex;
+  flex: 0.5;
+  align-items: center;
+  justify-content: flex-start;
+  h5{
+    font-weight: 550;
+  }
+}
 
-      button{
-        padding: 6px 1rem;
-        background-color: royalblue;
-        font-size: 0.9rem;
-        font-weight: 500;
-        color: #fff;
-        border-radius: 5px;
+      .close_new_vcardurl_page{
+   
+        flex: 0.5;
         display: flex;
-        align-items:center;
-        justify-content: center;
-        gap: 10px;
-        transition: all 0.3s ease-in;
-        i{
-          font-size: 1rem;
-        }
-
-        &:hover{
-          background-color: rgb(44, 93, 240);
-          box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
-          scale: 1.05;
+        align-items: center;
+        justify-content: flex-end;
+  
+        button{
+          padding: 6px 1rem;
+          background-color: royalblue;
+          font-size: 0.9rem;
+          font-weight: 500;
+          color: #fff;
+          border-radius: 5px;
+          display: flex;
+          align-items:center;
+          justify-content: center;
+          gap: 10px;
           transition: all 0.3s ease-in;
+          i{
+            font-size: 1rem;
+          }
+  
+          &:hover{
+            background-color: rgb(44, 93, 240);
+            box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+            scale: 1.05;
+            transition: all 0.3s ease-in;
+          }
         }
       }
     }
+
     
 
     .new_vcardURL_container_box {
@@ -156,6 +169,7 @@
               outline: none;
               border: 1px solid rgb(185, 185, 185);
               border-radius: 5px;
+              position: relative;
     
               &::placeholder {
                 font-size: 0.8rem;
@@ -163,37 +177,54 @@
               }
             }
     
-            // .first,
-            // .second {
-            //   label {
-            //     font-size: 0.9rem;
-            //     font-weight: 500;
-            //     color: rgb(105, 104, 104);
-            //     width: 100%;
-            //     sup {
-            //       color: red;
-            //       font-weight: bold;
-            //       margin-left: 3px;
-            //     }
-    
-            //     img {
-            //       width: 90px;
-            //       height: 90px;
-            //       object-fit: cover;
-            //       object-position: center;
-            //       border-radius: 50%;
-            //       border: 2px solid skyblue;
-            //     }
-            //   }
-            // }
             input[type="file"] {
               display: none;
             }
     
+            .url_error_handle{
+ position:absolute;
+ right: 5%;
+ bottom: 15%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ .success{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+
+  i{
+    color: green;
+  }
+  small{
+    font-size: 0.8rem;
+    color: green;
+  }
+
+ }
+ .failure{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+
+  i{
+    color: red;
+  }
+  small{
+    font-size: 0.8rem;
+    color: red;
+  }
+ }
+            }
             &:nth-child(1){
               grid-column: 1/-1;
             }
           }
+       
           .double_col_inputs {
             display: flex;
             flex-direction: row !important;
