--- a/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
+++ b/client/src/User_Admin_Dashboard/UserAdmin/UserAdmin.scss
@@ -290,7 +290,7 @@ z-index: 800;
       top: 10%;
       left: 50%;
       transform: translate(-50%,-10%);
-z-index: 600;
+z-index: 900;
       .box{
         width: 400px;
         height: 500px;
@@ -384,8 +384,13 @@ position: relative;
             margin-top: 2rem;
 
             .save{
-
+              display: flex;
+              align-items: center;
+              justify-content:center;
               button{
+                display: flex;
+                align-items: center;
+                justify-content:center;
                 outline: none;
                 border: transparent;
                 background-color: royalblue;
@@ -403,8 +408,13 @@ position: relative;
               }
             }
             .discard{
-
+              display: flex;
+              align-items: center;
+              justify-content:center;
               button{
+                display: flex;
+                align-items: center;
+                justify-content:center;
                 outline: none;
                 border: transparent;
                 background-color: rgb(172, 172, 172);
