--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_BasicForm.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_BasicForm.scss
@@ -41,12 +41,20 @@
             height: 70px;
           }
         }
-
+.p-editor-toolbar{
+  border: 1px solid #b9b9b9;
+}
+.ql-editor{
+  border: 1px solid #b9b9b9;
+  // border-left: 1px solid #b9b9b9;
+  // border-right: 1px solid #b9b9b9;
+  // border-bottom: 1px solid #b9b9b9;
+}
         input[type="text"] {
           padding: 8px 1rem;
           width: 100%;
           outline: none;
-          border: 1px solid rgb(185, 185, 185);
+          border: 1px solid #b9b9b9;
           border-radius: 5px;
 
           &::placeholder {
