--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Gallery.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Gallery.scss
@@ -1,4 +1,4 @@
-.gallery_container {
+.update_gallery_container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -56,6 +56,34 @@
     
       }
     }
+    .plan_based_service_add_note{
+      margin-top: 2rem;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; 
+  
+      .note{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+  
+        i{
+          font-size: 1.3rem;
+          color: rgb(94, 94, 94);
+        }
+        small{
+          font-size: 0.8rem;
+          font-weight: 550;
+          color: #427dfa;
+  
+          strong{
+            color: #464545;
+          }
+        }
+      }
+    }
     .add_new_gallery {
       display: flex;
       align-items: center;
@@ -71,18 +99,25 @@
         background-color: #6571ff;
         color: #fff;
         transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        i{
+          font-size: 1.4rem;
+          font-weight: 550;
+        }
         &:hover {
           box-shadow: 0px 2px 3px rgba(0, 0, 0.1);
-          background-color: rgb(255, 255, 255);
-          color: rgb(49, 49, 49);
-          font-weight: bolder;
+          background-color: #6571ff;
+          color: rgb(255, 255, 255);
+          font-weight: 500;
           transition: all 0.3s ease;
         }
       }
     }
   
     .gallery_list_table {
-      margin: 2rem auto;
+      margin: 0.5rem auto;
       padding: 1rem 0.2rem;
   
       width: 100%;
