--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
@@ -33,18 +33,53 @@
         background-color: #6571ff;
         color: #fff;
         transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        i{
+          font-size: 1.4rem;
+          font-weight: 550;
+        }
         &:hover {
-          box-shadow: 0px 2px 3px rgba(0, 0, 0.1);
-          background-color: rgb(255, 255, 255);
-          color: rgb(49, 49, 49);
-          font-weight: bolder;
+          // box-shadow: 0px 2px 2px rgb(163, 163, 163) !important;
+          background-color: #6571ff !important;
+          color: rgb(255, 255, 255);
+          font-weight: 500 !important;
+          scale: 1 !important;
           transition: all 0.3s ease;
         }
       }
     }
+    .plan_based_service_add_note{
+      margin-top: 2rem;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; 
   
+      .note{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+  
+        i{
+          font-size: 1.3rem;
+          color: rgb(94, 94, 94);
+        }
+        small{
+          font-size: 0.8rem;
+          font-weight: 550;
+          color: #427dfa;
+  
+          strong{
+            color: #464545;
+          }
+        }
+      }
+    }
     .product_list_table {
-      margin: 2rem auto;
+      margin: 0.5rem auto;
       padding: 1rem 0.2rem;
   
       width: 100%;
@@ -239,6 +274,15 @@
               strong{
                 color: red;
               }
+            }
+            .p-editor-toolbar{
+              border: 1px solid #b9b9b9;
+            }
+            .ql-editor{
+              border: 1px solid #b9b9b9;
+              // border-left: 1px solid #b9b9b9;
+              // border-right: 1px solid #b9b9b9;
+              // border-bottom: 1px solid #b9b9b9;
             }
             input {
               padding: 10px 1rem;
