--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Services.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Services.scss
@@ -1,4 +1,4 @@
-.service_container {
+.update_service_container {
   position: relative;
   width: 100%;
   height: 100%;
@@ -37,18 +37,52 @@
       background-color: #6571ff;
       color: #fff;
       transition: all 0.3s ease;
+
+      i{
+        font-size: 1.4rem;
+        font-weight: 550;
+      }
       &:hover {
         box-shadow: 0px 2px 3px rgba(0, 0, 0.1);
-        background-color: rgb(255, 255, 255);
-        color: rgb(49, 49, 49);
-        font-weight: bolder;
+        background-color: #6571ff;
+        color: rgb(255, 255, 255);
+        font-weight: 500;
         transition: all 0.3s ease;
       }
     }
   }
 
+  .plan_based_service_add_note{
+    margin-top: 2rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+
+    .note{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      i{
+        font-size: 1.3rem;
+        color: rgb(94, 94, 94);
+      }
+      small{
+        font-size: 0.8rem;
+        font-weight: 550;
+        color: #427dfa;
+
+        strong{
+          color: #464545;
+        }
+      }
+    }
+  }
+
   .service_list_table {
-    margin: 2rem auto;
+    margin: 0.2rem auto;
     padding: 1rem 0.2rem;
 
     width: 100%;
@@ -245,6 +279,16 @@
               color: red;
             }
           }
+          .p-editor-toolbar{
+            border: 1px solid #b9b9b9;
+            // border-bottom: none;
+          }
+          .ql-editor{
+            border: 1px solid #b9b9b9;
+            // border-left: 1px solid #b9b9b9;
+            // border-right: 1px solid #b9b9b9;
+            // border-bottom: 1px solid #b9b9b9;
+          }
           input {
             padding: 10px 1rem;
             border: 1px solid rgb(165, 165, 165);
@@ -326,7 +370,7 @@
   }
   //Update form style
   .update_new_service_container {
-    .create_new_service_box {
+    .update_new_service_box {
       position: fixed;
       top: 15%;
       left: 50%;
