--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Testimonial.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Testimonial.scss
@@ -1,4 +1,4 @@
-.testimonial_container {
+.update_testimonial_container {
     position: relative;
     width: 100%;
     height: 100%;
@@ -34,18 +34,52 @@
         background-color: #6571ff;
         color: #fff;
         transition: all 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        i{
+          font-size: 1.4rem;
+          font-weight: 550;
+        }
         &:hover {
           box-shadow: 0px 2px 3px rgba(0, 0, 0.1);
-          background-color: rgb(255, 255, 255);
-          color: rgb(49, 49, 49);
-          font-weight: bolder;
+          background-color: #6571ff;
+          color: rgb(255, 255, 255);
+          font-weight: 500 Im !important;
           transition: all 0.3s ease;
         }
       }
     }
+    .plan_based_service_add_note{
+      margin-top: 2rem;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; 
   
+      .note{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+  
+        i{
+          font-size: 1.3rem;
+          color: rgb(94, 94, 94);
+        }
+        small{
+          font-size: 0.8rem;
+          font-weight: 550;
+          color: #427dfa;
+  
+          strong{
+            color: #464545;
+          }
+        }
+      }
+    }
     .testimonial_list_table {
-      margin: 2rem auto;
+      margin: 0.5rem auto;
       padding: 1rem 0.2rem;
   
       width: 100%;
@@ -126,7 +160,7 @@
       }
       &::-webkit-scrollbar-thumb{
         border-radius: 5px;
-        background-color: #6571ff;
+        background-color: #707070 !important;
       }
     }
   //New testimonial form
@@ -138,7 +172,7 @@
         transform: translate(-50%, -10%);
         width: 30%;
         margin: 1rem auto;
-        padding: 1rem;
+        padding: 1rem 0px 1rem 1rem;
         place-items: center;
         min-width: 400px;
         height: auto;
@@ -185,7 +219,7 @@
           flex-direction: column;
           align-items: flex-start;
           justify-content: flex-start;
-          overflow: scroll;
+          overflow-y: scroll;
           padding-bottom: 2rem;
           padding-right: 10px;
           width: 100%;
@@ -228,6 +262,15 @@
               font-size: 0.7rem;
               font-weight: 500;
               color: gray;
+            }
+            .p-editor-toolbar{
+              border: 1px solid #b9b9b9;
+            }
+            .ql-editor{
+              border: 1px solid #b9b9b9;
+              // border-left: 1px solid #b9b9b9;
+              // border-right: 1px solid #b9b9b9;
+              // border-bottom: 1px solid #b9b9b9;
             }
             input {
               padding: 10px 1rem;
@@ -293,6 +336,16 @@
               }
             }
           }
+          &::-webkit-scrollbar {
+            width: 3px;
+            height: 4px;
+            background-color: #ffffff;
+            border-radius: 5px;
+          }
+          &::-webkit-scrollbar-thumb {
+            background: #727171 !important;
+            border-radius: 5px;
+          }
         }
       }
     }
@@ -305,7 +358,7 @@
         transform: translate(-50%, -10%);
         width: 30%;
         margin: 1rem auto;
-        padding: 1rem;
+        padding: 1rem 0px 1rem 1rem;
         place-items: center;
         min-width: 400px;
         height: auto;
@@ -470,8 +523,151 @@
             border-radius: 5px;
           }
           &::-webkit-scrollbar-thumb {
-            background: #a4a7ff;
+            background: #727171 !important;
             border-radius: 5px;
+          }
+        }
+      }
+    }
+    //View Testimonial
+    .view_new_testimonial_container {
+      .view_new_testimonial_box {
+        position: fixed;
+        top: 15%;
+        left: 50%;
+        transform: translate(-50%, -10%);
+        width: 30%;
+        margin: 1rem auto;
+        padding: 1rem;
+        place-items: center;
+        min-width: 400px;
+        height: auto;
+        background-color: #fff;
+        box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+  
+        .title {
+          display: flex;
+          align-self: center;
+          justify-content: space-between;
+          width: 100%;
+  
+          height: 50px;
+          border-bottom: 1px solid rgb(231, 231, 231);
+  
+          p {
+            font-weight: 550;
+            font-size: 1.1rem;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+  
+          i {
+            font-size: 2rem;
+            color: gray;
+            // height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+  
+            &:hover {
+              color: red;
+            }
+          }
+        }
+        .details_container {
+          padding: 1rem 5px;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 10px;
+          .service_image {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .service_image {
+              padding: 10px 0.5rem;
+              img {
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+                box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4);
+                object-fit: cover;
+                object-position: center;
+              }
+            }
+          }
+          .service_name {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+              p{
+                font-size: 0.8rem;
+                font-weight: 550;
+              }
+            }
+         
+          }
+          .service_desc {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+              p{
+                font-size: 0.8rem;
+                font-weight: 550;
+              }
+            }
+         
+          }
+          .service_url{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 0px;
+            .service_title {
+              font-size: 0.9rem;
+              font-weight: 550;
+              color: #646363;
+            }
+            .name{
+              padding: 10px 0.5rem;
+             
+              a{
+                text-decoration: none;
+                font-size: 0.8rem;
+              }
+            }
+         
           }
         }
       }
@@ -504,7 +700,7 @@
       border-radius: 5px;
     }
     &::-webkit-scrollbar-thumb {
-      background: #a4a7ff;
+      background: #5c5c5c !important;
       border-radius: 5px;
     }
   }
