--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
@@ -17,22 +17,32 @@
           font-weight: 500;
         }
       }
-      .action {
-        button {
-          padding: 8px 1rem;
-          outline: none;
-       
-          border: 1px solid #6571ff;
-          color: #6571ff;
-          outline: none;
-          background: transparent;
-          border-radius: 10px;
-          font-weight: 400;
-          transition: all 0.3s ease;
-          &:hover {
-              background-color: #6571ff;
-            color: #ffffff;
-            border: transparent;
+      .back_action {
+        button{
+          padding: 6px 1rem !important;
+          background-color: rgb(85, 85, 85) !important;
+          // border: 1px solid #b379ff !important;
+          font-size: 0.9rem;
+          font-weight: 500;
+          color: #ffffff !important;
+          border-radius: 5px !important;
+          display: flex;
+          align-items:center;
+          justify-content: center;
+          gap: 10px;
+          transition: all 0.3s ease-in;
+          i{
+            display: block !important;
+            font-size: 1rem !important;
+          }
+  
+          &:hover{
+            background-color: #3f3f3f !important;
+            scale: 1 !important;
+            border: none !important;
+            color: #fff !important;
+            box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+            transition: all 0.2s ease-in;
           }
         }
       }
