--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Business_Hour.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Business_Hour.scss
@@ -73,17 +73,25 @@ padding-left: 10px;
             justify-content: center;
             vertical-align: middle;
             p{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              vertical-align: middle;
            font-size: 0.8rem;
            font-weight: 500;
-           color: gray;
+           color: rgb(51, 51, 51);
             }
         }
 
         input{
             flex: 0.5;
-            border: 1px solid rgb(196, 196, 196);
+            border: 1px solid rgb(255, 255, 255);
+            background-color: #a7ffd6;
+            // box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
             outline: none;
             cursor: pointer;
+            font-size: 0.9rem;
+            font-weight: 500;
            
 
         }
