--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Banner.scss
@@ -11,6 +11,7 @@
         align-items: flex-start;
         justify-content: flex-start;
         gap: 10px;
+        padding-top: 1rem;
     
         h4 {
           font-size: 0.9rem;
