--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Select_Template.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Select_Template.scss
@@ -335,6 +335,10 @@
       background: #d37ffa;
       border-radius: 5px;
     }
+
+    @media screen and (max-width:600px){
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    }
       }
       .noplans{
         width: 100%;
