--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Business_Hour.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Business_Hour.scss
@@ -4,6 +4,7 @@
     position: relative;
     padding: 1rem;
     .title {
+      padding-top: 1rem;
         width: 100%;
         display: flex;
         flex-direction: column;
