--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Gallery.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Gallery.scss
@@ -42,6 +42,7 @@
       }
     }
     .plan_title{
+      padding-top: 1rem;
       p{
         display: flex;
         align-items: center;
@@ -119,10 +120,11 @@
     .gallery_list_table {
       margin: 0.5rem auto;
       padding: 1rem 0.2rem;
-  
+  z-index: 900;
       width: 100%;
   
       table {
+        min-width: 100%;
         thead {
           tr {
             th {
@@ -174,6 +176,9 @@
               }
             }
           }
+        }
+        @media screen and (max-width:600px){
+          min-width: 130%;
         }
       }
     }
