--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_PrivacyPolicy.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_PrivacyPolicy.scss
@@ -3,6 +3,7 @@
     position: relative;
     padding: 1rem;
     .title {
+      padding-top: 1rem;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
