--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Products.scss
@@ -4,6 +4,7 @@
     height: 100%;
     padding: 1rem;
     .product_plan_title{
+      padding-top: 1rem;
       p{
         display: flex;
         align-items: center;
@@ -85,6 +86,7 @@
       width: 100%;
   
       table {
+        min-width: 100%;
         p{
           display: flex;
           align-items: center;
@@ -137,6 +139,9 @@
               }
             }
           }
+        }
+        @media screen and (max-width:600px){
+          min-width: 250%;
         }
       }
     }
