--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_QR_Code.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_QR_Code.scss
@@ -50,9 +50,17 @@
       img{
         width: 250px;
         height: auto;
+
+        @media screen and (max-width:600px){
+          display: none;
+        }
+      }
+      @media screen and (max-width:600px){
+        display: none;
       }
     }
     .plan_title{
+      padding-top: 1rem;
       p{
         display: flex;
         align-items: center;
