--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_SocialMedias.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_SocialMedias.scss
@@ -70,7 +70,7 @@
    
             display: flex;
             align-self: center;
-            justify-content: center;
+            justify-content: flex-start;
            vertical-align: middle;
 
 
@@ -216,5 +216,11 @@
         }
       }
     }
+
+    @media  screen and (max-width:600px) {
+      margin: auto;
+      width: 100%;
+      padding: 0px;
+        }
   }
 }
