--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Testimonial.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/Edit_All_Form_Component/Edit_form_styles/Edit_Testimonial.scss
@@ -5,6 +5,7 @@
     padding: 1rem;
 
     .plan_title{
+      padding-top:1rem;
       p{
         display: flex;
         align-items: center;
@@ -24,7 +25,7 @@
       align-items: center;
       justify-content: flex-end;
       width: 100%;
-  
+
       button {
         outline: none;
         border: transparent;
@@ -37,6 +38,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 800;
         i{
           font-size: 1.4rem;
           font-weight: 550;
@@ -83,8 +85,10 @@
       padding: 1rem 0.2rem;
   
       width: 100%;
+      overflow-x: auto;
   
       table {
+        min-width: 100%;
         thead {
           tr {
             th {
@@ -138,6 +142,9 @@
             }
           }
         }
+        @media screen and (max-width:600px){
+          min-width: 330%;
+        }
       }
     }
   
@@ -166,7 +173,7 @@
   //New testimonial form
     .create_new_testimonial_container {
       .create_new_testimonial_box {
-        position: fixed;
+        position: absolute;
         top: 20%;
         left: 50%;
         transform: translate(-50%, -10%);
@@ -176,6 +183,7 @@
         place-items: center;
         min-width: 400px;
         height: auto;
+        z-index: 1000;
         background-color: #fff;
         box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.3);
         border-radius: 10px;
@@ -347,12 +355,20 @@
             border-radius: 5px;
           }
         }
+        @media screen and (max-width:600px){
+          position: absolute;
+          top: 20%;
+          left: 50%;
+          transform: translate(-50%,-20%);
+          min-width: 100%;
+          z-index: 900;
+        }
       }
     }
      //update testimonial form
     .update_new_testimonial_container {
       .update_new_testimonial_box {
-        position: fixed;
+        position: absolute;
         top: 20%;
         left: 50%;
         transform: translate(-50%, -10%);
@@ -532,7 +548,7 @@
     //View Testimonial
     .view_new_testimonial_container {
       .view_new_testimonial_box {
-        position: fixed;
+        position: absolute;
         top: 15%;
         left: 50%;
         transform: translate(-50%, -10%);
