--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/Vcard_Form/VCard_Form_Edit.scss
@@ -15,6 +15,9 @@
           font-size: 1.2rem;
           color: #181818;
           font-weight: 500;
+          @media screen and (max-width:600px){
+         font-size: 0.9rem;
+               }
         }
       }
       .back_action {
@@ -46,6 +49,9 @@
           }
         }
       }
+      @media screen and (max-width:600px){
+        padding: 0rem 1rem;
+           }
     }
     .vcard_form_box {
       width: 100%;
@@ -61,7 +67,26 @@
       overflow: scroll;
       position: relative;
   
-   
+      .slider_icon{
+        position: absolute;
+        top: 0.5%;
+        left: 6%;
+        z-index:10;
+        display: none;
+  
+        i{
+          font-size: 1.1rem;
+          color: royalblue;
+          cursor: pointer;
+          &:hover{
+            filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.4)) ;
+            
+          }
+        }
+        @media screen and (max-width:950px){
+     display: block;
+             }
+       }
       // SideNav Style
       .form_sidenav {
           position: sticky;
@@ -69,7 +94,7 @@
           top: 0%;
         display: flex;
         flex-direction: column;
-        flex: 0.2;
+        flex: 0.20;
         width: 100%;
         height: 100%;
         align-items: center;
@@ -78,103 +103,42 @@
         // border-right: 1px solid rgb(199, 199, 199);
         overflow-y: scroll;
         padding: 1.5rem 0rem 1rem 0.4rem;
+        transform: translateX(0px);
+        transition: all 0.2s linear;
   
-     .slider_icon{
-      position: absolute;
-      top: 0%;
-      right: 5%;
-      z-index: 800;
-      
 
-      i{
-        font-size: 1.1rem;
-        color: royalblue;
-        cursor: pointer;
-        &:hover{
-          filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.4)) ;
-          
-        }
-      }
-     }
   
-          // .menu_item:nth-child(6){
-  
-          //   &:hover{
-          //     cursor: not-allowed;
-          //     opacity: 0.4;
-          //     background-color: none !important;
-          //     // border-left: 4px solid #6571ff;
-          //     border-top-left-radius:4px;
-          //     border-bottom-left-radius: 4px;
-          //     transition: all 0.1s ease;
-          // }
-          // }
-          // .menu_item:nth-child(8){
-  
-          //   &:hover{
-          //     cursor: not-allowed;
-          //     opacity: 0.4;
-          //     background-color: none !important;
-          //     // border-left: 4px solid #6571ff;
-          //     border-top-left-radius:4px;
-          //     border-bottom-left-radius: 4px;
-          //     transition: all 0.1s ease;
-          // }
-          // }
-          // .menu_item:nth-child(9){
-  
-          //   &:hover{
-          //     cursor: not-allowed;
-          //     opacity: 0.4;
-          //     background-color: none !important;
-          //     // border-left: 4px solid #6571ff;
-          //     border-top-left-radius:4px;
-          //     border-bottom-left-radius: 4px;
-          //     transition: all 0.1s ease;
-          // }
-          // }
-          // .menu_item:nth-child(12){
-  
-          //   &:hover{
-          //     cursor: not-allowed;
-          //     opacity: 0.4;
-          //     background-color: none !important;
-          //     // border-left: 4px solid #6571ff;
-          //     border-top-left-radius:4px;
-          //     border-bottom-left-radius: 4px;
-          //     transition: all 0.1s ease;
-          // }
-          // }
-          // .menu_item:nth-child(15){
-  
-          //   &:hover{
-          //     cursor: not-allowed;
-          //     opacity: 0.4;
-          //     background-color: none !important;
-          //     // border-left: 4px solid #6571ff;
-          //     border-top-left-radius:4px;
-          //     border-bottom-left-radius: 4px;
-          //     transition: all 0.1s ease;
-          // }
-          // }
         .menu_item {
           display: flex;
           align-items: center;
           justify-content: flex-start;
           gap: 1rem;
           width: 100%;
-          padding: 15px 0.5rem 15px 20px;
+          height:50px;
+          // padding: 15px 0.5rem 15px 20px;
           transition: all 0.1s ease;
           margin-bottom: 10px;
           cursor: pointer;
   
           i {
             font-size: 1.3rem;
+
+            height: 50px;
+      
+            display: flex;
+            align-items: center;
+            justify-content: center;
           }
           small {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+            height: 50px;
             font-size: 0.8rem;
             font-weight: 500;
             color: #424040;
+   
           }
   
           &:hover{
@@ -199,22 +163,71 @@
           background-color: #7a7a7a;
           border-radius: 5px;
         }
+        @media screen and (max-width:1000px){
+          flex: 0.35;
+        }
+        @media screen and (max-width:980px){
+          flex: 0.45;
+        }
+        @media screen and (max-width:800px){
+          flex: 0.55;
+        }
+        @media screen and (max-width:600px){
+          flex: 0.60;
+        }
+        @media screen and (max-width:500px){
+          flex: 0.65;
+        }
+        @media screen and (max-width:470px){
+          flex:0.70;
+        }
       }
   
       // Forms style
       .all_form_inputs {
         display: flex;
-        flex: 0.8;
+        flex: 0.80;
         width: 100%;
         height: 100%;
         align-items: flex-start;
         justify-content: flex-start;
         // background-color: #818181;
+        @media screen and (max-width:1000px){
+          flex: 0.65;
+        }
+        @media screen and (max-width:980px){
+          flex: 0.35;
+        }
+        @media screen and (max-width:800px){
+          flex: 0.45;
+        }
+        @media screen and (max-width:600px){
+          flex: 0.40;
+        }
+        @media screen and (max-width:500px){
+          flex: 0.35;
+        }
+        @media screen and (max-width:470px){
+          flex:0.30;
+        }
       }
   
       &::-webkit-scrollbar {
         display: none;
       }
+
+      @media screen and (max-width:600px){
+        width: 100%;
+        height:auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        background: white;
+        box-shadow: none;
+      }
+    }
+    @media screen and (max-width:600px){
+ padding: 1rem 0rem;
     }
   }
   
@@ -230,31 +243,76 @@
   }
 
   //Form slider::after
-
+@media screen and (max-width:950px){
   #slideClose{
-   flex: 0.04;
-   padding: 1rem 1rem;
-   overflow-x: hidden;
-
-   .menu_item{
-    // gap: 1rem;
-    // width: 20%;
-    // height: 10%;
-    margin: 10px auto;
+    flex: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 10px 0rem 10px 0px;
-    border-radius: 5rem;
-
-    margin: 5px auto;
-
-    small{
-      display: none;
+    justify-content: flex-start;
+   //  padding: 1rem 0.5rem;
+    overflow-x: hidden;
+    transition: all 0.2s linear;
+ transform: translateX(-300px);
+    .menu_item{
+     // gap: 1rem;
+     // width: 20%;
+     // height: 10%;
+    //  height: 50px;
+    //  width: 50px;
+     margin: 5px 0px;
+     display: flex;
+     align-items: center;
+     justify-content: flex-start;
+     // padding: 10px 0rem 10px 0px;
+    //  border-radius: 0.5rem;
+ 
+ 
+     i{
+       width: 100%;
+       height: 50px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+ 
+     }
+     small{
+       display: none;
+     }
     }
+    &::-webkit-scrollbar {
+     width: 4px;
+   display: none;
+     background-color: rgb(255, 255, 255);
+     border-radius: 5px;
    }
-  }
-
-  #slideOpen{
-
-  }
+ 
+   &::-webkit-scrollbar-thumb {
+     width: 3px;
+     height: 4px;
+     background-color: #7a7a7a;
+     border-radius: 5px;
+   }
+   }
+ #formExpand{
+ 
+   flex: 1;
+   width: 100%;
+   height: 100%;
+   display: block;
+ 
+   // background-color: #818181;
+ }
+ #formMinimize{
+ 
+   flex: 1;
+   width: 100%;
+   height: 100%;
+   display: none;
+ 
+ 
+   // background-color: #818181;
+ }
+   #slideOpen{
+ 
+   }
+}
