--- a/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
+++ b/client/src/User_Admin_Dashboard/User_Admin_All_Component/menuStyles/VCard_URL_Form.scss
@@ -10,49 +10,51 @@ justify-content: space-between;
 width: 100%;
 
 .title{
+  width: 100%;
   display: flex;
-  flex: 0.5;
   align-items: center;
   justify-content: flex-start;
+  padding-left: 1rem;
   h5{
+    font-size: 1rem;
     font-weight: 550;
   }
 }
 
-      .close_new_vcardurl_page{
-   
-        flex: 0.5;
+
+    }
+
+    .close_new_vcardurl_page{
+   width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding-right: 1rem;
+
+      button{
+        padding: 6px 1rem;
+        background-color: royalblue;
+        font-size: 0.9rem;
+        font-weight: 500;
+        color: #fff;
+        border-radius: 5px;
         display: flex;
-        align-items: center;
-        justify-content: flex-end;
-  
-        button{
-          padding: 6px 1rem;
-          background-color: royalblue;
-          font-size: 0.9rem;
-          font-weight: 500;
-          color: #fff;
-          border-radius: 5px;
-          display: flex;
-          align-items:center;
-          justify-content: center;
-          gap: 10px;
+        align-items:center;
+        justify-content: center;
+        gap: 10px;
+        transition: all 0.3s ease-in;
+        i{
+          font-size: 1rem;
+        }
+
+        &:hover{
+          background-color: rgb(44, 93, 240);
+          box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
+          scale: 1.05;
           transition: all 0.3s ease-in;
-          i{
-            font-size: 1rem;
-          }
-  
-          &:hover{
-            background-color: rgb(44, 93, 240);
-            box-shadow: 0px 4px 5px rgba(0,0,0,0.4);
-            scale: 1.05;
-            transition: all 0.3s ease-in;
-          }
         }
       }
     }
-
-    
 
     .new_vcardURL_container_box {
         width: 100%;
@@ -98,7 +100,7 @@ width: 100%;
         }
         form {
           display: grid;
-          width: 90%;
+          width: 100%;
           grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
           grid-row-gap: 1.5rem;
           grid-column-gap: 2rem;
@@ -115,8 +117,9 @@ width: 100%;
             align-items: flex-start;
             justify-content: flex-start;
             gap: 5px;
-            width: 100%;
-            position: relative;
+            width: 95%;
+            margin: auto;
+          
     
          
             label {
@@ -188,6 +191,8 @@ width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
+ margin: auto;
+
  .success{
   display: flex;
   align-items: center;
@@ -335,11 +340,13 @@ width: 100%;
           }
           .form_group {
             display: flex;
+            position: relative;
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-start;
             gap: 5px;
-            width: 100%;
+            width: 95%;
+            margin: auto;
     
             label {
               font-size: 0.8rem;
@@ -370,6 +377,10 @@ width: 100%;
               &::placeholder {
                 font-size: 0.8rem;
                 color: gray;
+              }
+              @media screen and (max-width:600px){
+        
+               width: 95%;
               }
             }
     
@@ -461,6 +472,7 @@ width: 100%;
               align-items: center;
               justify-content: flex-end;
               gap: 10px;
+              padding: 0px 2rem;
     
               button{
                 outline: none;
@@ -502,6 +514,18 @@ width: 100%;
                 }
               }
             }
+            @media screen and (max-width:600px){
+              width: 100%;
+              padding: 10px;
+            }
         }
+        @media screen and (max-width:600px){
+        
+          padding: 10px;
+        }
+      }
+      @media screen and (max-width:600px){
+        
+        padding: 10px 0px;
       }
 }
