--- a/client/src/User_Admin_Dashboard/User_Profile_Setting/styles/UserAccountSetting.scss
+++ b/client/src/User_Admin_Dashboard/User_Profile_Setting/styles/UserAccountSetting.scss
@@ -1,8 +1,15 @@
 .account_setting_container{
     position: relative;
-    padding:2rem;
+    padding:0.5rem;
 width: 100%;
+.setting_title{
+    padding: 2rem 0.5rem;
 
+    h4{
+font-size: 1rem;
+font-weight: 550;
+    }
+}
     .account_form_box{
       width: 100%;
       min-height: auto;
